2024-08-13  Paul J. Lucas <paul@lucasmail.org>

   * cli_options.c, cli_options-error.out, cli_options.out: Updated help for
     --permissive-types to match recent change.
   * p_macro.c, test/Makefile.am, expand-C23_std-6.10.4.1-ex-1.out,
     expand-C23_std-6.10.4.1-ex-1.test: Changed "assert( list_empty(
     &mex->va_args_token_list ) )" to "if ( !... )".
   * p_macro.c, test/Makefile.am, expand-C23_std-6.10.4.1-ex-2.out,
     expand-C23_std-6.10.4.5-ex-7.out, expand-va-opt-minutiae.out, expand.out,
     expand-va-opt-minutiae.test, expand.test: `__VA_ARGS__` as a `##` argument
     is now correctly not further expanded.

2024-08-12  Paul J. Lucas <paul@lucasmail.org>

   * dump.c, debug.out: Now dumping p_token location only if first_column > 0.
   * p_token.c, p_token.h: Moved p_is_operator_arg() out-of-line.

2024-08-11  Paul J. Lucas <paul@lucasmail.org>

   * p_macro.c: Eliminated va_args_str.
   * p_macro.c, expand.out, expand.test: Leading & trailing whitespace in
     `__VA_OPT__()` tokens is now trimmed.

2024-08-10  Paul J. Lucas <paul@lucasmail.org>

   * configure.ac: s/= xno/!= xyes/
   * util.c, util.h: free_later() now allows NULL.

2024-08-09  Paul J. Lucas <paul@lucasmail.org>

   * read_line.c: Removed assert().
   * configure.ac, pjl_config.h, util.h: Now using AC_C_TYPEOF.
   * configure.ac: Added AC_C__GENERIC.

2024-08-08  Paul J. Lucas <paul@lucasmail.org>

   * set_options.c, util.c, util.h, util_test.c: Replaced strn_nohyphen_equal()
     with strncmp_in_set().

2024-08-07  Paul J. Lucas <paul@lucasmail.org>

   * autocomplete.c: Factored out determine_command().
   * autocomplete.c: Now using strbuf_t.

2024-08-06  Paul J. Lucas <paul@lucasmail.org>

   * autocomplete.c, ac-set.exp: For the `set` command, if the user types
     `no-`, change it to `no`.
   * set_options.c: Now allowing optional '-' after "set no" for a "no" option.
   * set_options.c: Now checking for lang only if not is_no.
